--- a/src/custom.css
+++ b/src/custom.css
@@ -53,3 +53,54 @@
 .logs-detail > li {
   list-style: none;
 }
+
+div.panel {
+  max-height: 0;
+  overflow: hidden;
+  transition: 0.6s ease-in-out;
+  opacity: 0;
+  margin-left: 42px;
+  width: 100%;
+}
+
+.list__item__center {
+  padding-left: 0px;
+}
+
+div.panel.show {
+  opacity: 1;
+  max-height: 500px;
+}
+
+.accordion {
+  transition: 0.4s;
+  margin-left: -20px;
+}
+
+.accordion:before {
+
+}
+.accordion.active:before {
+
+}
+
+.recipe-title {
+  width: 100%;
+}
+.recipe-title:before {
+  margin-top: -3px;
+  content: '\02795';
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.recipe-title.active:before {
+  content: "\2796";
+}
+
+.ingredients-title {
+  width: 100%;
+  margin-left: 14px;
+  margin-top: 30px;
+  margin-bottom: 15px;
+  font-size: 120%;
+}
