--- a/src/custom.css
+++ b/src/custom.css
@@ -85,16 +85,26 @@ div.panel.show {
 }
 
 .recipe-title {
-  width: 100%;
+  display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: stretch;
+    width: 100%;
 }
+.recipe-title-left {order: 1; width: calc(100% - 88px); padding-top: 10px;}
+.recipe-title-b1 {order: 2; width: 44px;}
+.recipe-title-b2 {order: 3; width: 44px;}
 .recipe-title:before {
-  margin-top: -3px;
+  padding-top: 12px;
   content: '\02795';
   margin-left: 20px;
   margin-right: 20px;
+  cursor: pointer;
 }
 .recipe-title.active:before {
   content: "\2796";
+  cursor: pointer;
 }
 
 .ingredients-title {
@@ -103,4 +113,10 @@ div.panel.show {
   margin-top: 30px;
   margin-bottom: 15px;
   font-size: 120%;
+}
+
+.accordion-outer-button {
+  margin-left: 2px;
+  width: 40px;
+  text-align: center;
 }
