--- a/src/custom.css
+++ b/src/custom.css
@@ -126,6 +126,11 @@
   margin-bottom: 4px;
 }
 
+.control-form-content-height {
+  height: calc(100vh - 224px);
+  overflow-y: scroll;
+}
+
 /*
  * ONSEN SPECIFIC
  */
@@ -135,3 +140,7 @@ ons-input {
 ons-input input {
   width: 100% !important;
 }
+
+/*
+ * MEDIA QUERIES
+ */
