--- a/src/custom.css
+++ b/src/custom.css
@@ -61,7 +61,7 @@
 
 .panel {
   margin-top: 8px;
-  max-height: 500px;
+  /* max height required ??? */
   overflow-y: scroll;
   overflow-x: hidden;
   width: calc(100% - 2px);
@@ -75,7 +75,7 @@
   width: 100%;
 }
 
-.recipe-title {
+.recipe-title, .recipe-detail {
   display: flex;
   flex-wrap: nowrap;
   flex-direction: row;
@@ -83,11 +83,17 @@
   align-items: stretch;
   width: 100%;
 }
+
 .recipe-title-position {
   position: relative;
   top: -4px;
 }
-.recipe-title-left {order: 1; width: calc(100% - 88px); padding-top: 10px;}
+
+.recipe-title-left, .recipe-detail-left {order: 1; width: calc(100% - 92px); padding-top: 10px;}
+.recipe-detail-right {
+  order: 2;
+  margin-left: 6px;
+}
 
 .recipe-title-b1 {order: 2; width: 44px;}
 
@@ -116,10 +122,28 @@
   width: 100%;
 }
 
-.accordion-outer-button {
+.accordion-outer-button, .details-outer-button {
   margin-left: 2px;
   width: 40px;
   text-align: center;
+}
+
+.float-left {
+  float: left;
+}
+
+.float-right {
+  float: right;
+}
+
+.button-position-add {
+  margin-top: 6px;
+  margin-bottom: 6px;
+  float: right;
+}
+
+.width-100 {
+  width: 100%;
 }
 
 .new-recipe-control {
